// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PropTypes.arrayOf 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="colors"
        />
      </td>
      <td>
        <Styled(Code)>
          string[]
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.arrayOf(PropTypes.shape) 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="foos"
        />
      </td>
      <td>
        <Styled(Code)>
          shape[]
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <div>
              <Styled(Code)>
                bar
              </Styled(Code)>
              : 
              <Styled(Code)>
                number
              </Styled(Code)>
            </div>
            <div>
              <Styled(Code)>
                baz
              </Styled(Code)>
              : 
              <Styled(Code)>
                any
              </Styled(Code)>
            </div>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.instanceOf 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="num"
        />
      </td>
      <td>
        <Styled(Code)>
          Number
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.objectOf 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="colors"
        />
      </td>
      <td>
        <Styled(Code)>
          {string}
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.objectOf(PropTypes.shape) 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="colors"
        />
      </td>
      <td>
        <Styled(Code)>
          {shape}
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <div>
              <Styled(Code)>
                bar
              </Styled(Code)>
              : 
              <Styled(Code)>
                number
              </Styled(Code)>
               — 
              <span>
                Required
              </span>
            </div>
            <div>
              <Styled(Code)>
                baz
              </Styled(Code)>
              : 
              <Styled(Code)>
                any
              </Styled(Code)>
            </div>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.oneOf 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="size"
        />
      </td>
      <td>
        <Styled(Code)>
          enum
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <span>
              One of: 
              <Group
                inline={true}
                separator=", "
              >
                <Styled(Code)>
                  small
                </Styled(Code)>
                <Styled(Code)>
                  normal
                </Styled(Code)>
                <Styled(Code)>
                  large
                </Styled(Code)>
              </Group>
            </span>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.oneOfType 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="union"
        />
      </td>
      <td>
        <Styled(Code)>
          union
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <span>
              One of type: 
              <Group
                inline={true}
                separator=", "
              >
                <Styled(Code)>
                  string
                </Styled(Code)>
                <Styled(Code)>
                  number
                </Styled(Code)>
              </Group>
            </span>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.shape 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="foo"
        />
      </td>
      <td>
        <Styled(Code)>
          shape
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <div>
              <Styled(Code)>
                bar
              </Styled(Code)>
              : 
              <Styled(Code)>
                number
              </Styled(Code)>
               — 
              <span>
                Required
              </span>
            </div>
            <div>
              <Styled(Code)>
                baz
              </Styled(Code)>
              : 
              <Styled(Code)>
                any
              </Styled(Code)>
            </div>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.shape with description 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="foo"
        />
      </td>
      <td>
        <Styled(Code)>
          shape
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <div>
              <Styled(Code)>
                bar
              </Styled(Code)>
              : 
              <Styled(Code)>
                number
              </Styled(Code)>
               — 
              <span>
                Required
              </span>
               — 
              <Styled(Markdown)
                inline={true}
                text="Number"
              />
            </div>
            <div>
              <Styled(Code)>
                baz
              </Styled(Code)>
              : 
              <Styled(Code)>
                any
              </Styled(Code)>
               — 
              <Styled(Markdown)
                inline={true}
                text="Any"
              />
            </div>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.string 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="color"
        />
      </td>
      <td>
        <Styled(Code)>
          string
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.string with a default value 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="color"
        />
      </td>
      <td>
        <Styled(Code)>
          string
        </Styled(Code)>
      </td>
      <td>
        <Styled(Code)>
          pink
        </Styled(Code)>
      </td>
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.string.isRequired 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="color"
        />
      </td>
      <td>
        <Styled(Code)>
          string
        </Styled(Code)>
      </td>
      <td>
        <span>
          Required
        </span>
      </td>
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render arguments from JsDoc tags 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="size"
        />
      </td>
      <td>
        <Styled(Code)>
          number
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <Styled(Markdown)
            text="Test description"
          />
          <JsDoc
            arg={
              Array [
                Object {
                  "description": "Converts foo to bar",
                  "name": "Foo",
                  "type": Object {
                    "name": "Array",
                  },
                },
              ]
            }
            param={
              Array [
                Object {
                  "name": "Bar",
                },
              ]
            }
          />
          <div>
            <h4>
              Arguments
            </h4>
            <Styled(Arguments)
              args={
                Array [
                  Object {
                    "description": "Converts foo to bar",
                    "name": "Foo",
                    "type": Object {
                      "name": "Array",
                    },
                  },
                  Object {
                    "name": "Bar",
                  },
                ]
              }
            />
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render description in Markdown 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="color"
        />
      </td>
      <td>
        <Styled(Code)>
          string
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <Styled(Markdown)
            text="Label"
          />
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render function body in tooltip 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="fn"
        />
      </td>
      <td>
        <Styled(Code)>
          func
        </Styled(Code)>
      </td>
      <td>
        <span
          title="(e) => console.log(e)"
        >
          Function
        </span>
      </td>
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render name as deprecated when tag deprecated is present 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={true}
          name="size"
        />
      </td>
      <td>
        <Styled(Code)>
          number
        </Styled(Code)>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <Styled(Markdown)
            text="Test description"
          />
          <JsDoc
            deprecated={
              Array [
                Object {
                  "description": "Do not use.",
                  "title": "deprecated",
                },
              ]
            }
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render unknown proptype for a prop when a relevant proptype is not assigned 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <Styled(Name)
          deprecated={false}
          name="color"
        />
      </td>
      <td>
        <Styled(Code)>
          unknown
        </Styled(Code)>
      </td>
      <td>
        <Styled(Code)>
          pink
        </Styled(Code)>
      </td>
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
